Changelog
=========

2.1 (unreleased)
----------------

- Works when the field related to KeywordIndex is monovalued [thomasdesvenain]

- UI and labels improvements [thomasdesvenain]
	- selected values are kept after form submission
	- change in selection lists automatically submit the form
	- keywords are clickable labels
	- added some helpers and tooltips, and improved labels

- check for plone.app.multilingual and Products.LinguaPlone [pbauer]

- Fixed getSetter and getListFieldValues method in tool to handle also
  non-default field names [cekk]

- Removed skins and moved control panel to a browser view [cekk]

- Added custom permission to access the view [cekk]

- Fixed uninstall profile [cekk]

- Moved translations from i18n to locales [cekk]

2.0 (2013-04-24)
----------------

- take plone.app.multilingual into acount and set Language=all on change.
  [jensens]

- Use png icon as gif icon has been removed.
  [thomasdesvenain]

- Fix index update on keyword delete not to reindex all attributes. [leorochael]

- Add support for dexterity (and generic DublinCoreImpl subclasses). [leorochael]

- Tests use now plone.app.testing; test coverage improved. [hvelarde]

- Fix package distribution. [hvelarde]

- Do not create a `keywords` Document in the plone-site in case the ``keywords.txt``
  file is empty. (useful for sites not having Document globally allowed)
  [fRiSi]

- Allow `Site Administrators` too access the keyword managment
  [fRiSi]

- Make installation possible for dexterity-based Documents [pysailor]

1.9 (2011-06-22)
----------------

- Fixed critical error at index update.
  [thomasdesvenain]

- Upgrade imports for Zope 2.13. Remove deprecation warnings.
  [toutpt]

1.8 (2011-04-08)
----------------

- Add tests related to skins-directories. [WouterVH]

- remove old-style Install.py. [WouterVH]

- Add uninstall-profile. [WouterVH]

- Fix marker-file for setuphandlers.py. [WouterVH]

- Add MANIFEST.in to include docs in release. [WouterVH]
